--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet">
 
-  <!-- Estilos institucionales -->
+  <!-- Estilos -->
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -40,7 +40,6 @@
 
     <div class="form-item">
       <label for="colInput">Colonia</label>
-      <!-- Autocomplete con datalist -->
       <input id="colInput" list="colList" placeholder="Empieza a escribir la colonia…" disabled>
       <datalist id="colList"></datalist>
       <small class="hint">Escribe el nombre de la colonia y selecciónala de la lista.</small>
@@ -71,8 +70,10 @@ let manzanasFeatures = [];
 
 let map;
 let capaColonias;
+let capaManzanasTodas;
 let capaManzanasResaltadas;
-let indiceColonias = {}; // clave "NOM_MUN|COLONIA" -> layer colonia
+let indiceColonias = {};      // clave "NOM_MUN|COLONIA" -> layer colonia
+let colValueToIndex = {};     // etiqueta del datalist -> índice en coloniasFeatures
 
 // ------------ Utilidades ------------ //
 function normalizarTexto(str) {
@@ -87,19 +88,22 @@ function normalizarTexto(str) {
   return fixes[raw] || raw;
 }
 
+// Colores según prioridad (tus códigos)
 function estiloPrioridad(prioridad) {
   const p = (prioridad || "").toLowerCase().trim();
-  // Colores por prioridad
-  if (p === "muy alta") {
-    return { color: "#d32f2f", fillColor: "#ffcdd2" };  // rojo
-  } else if (p === "alta") {
-    return { color: "#f57c00", fillColor: "#ffe0b2" };  // naranja
-  } else if (p === "media") {
-    return { color: "#fbc02d", fillColor: "#fff9c4" };  // amarillo
+
+  if (p === "muy baja") {
+    return { color: "#003300", fillColor: "#006100" };
   } else if (p === "baja") {
-    return { color: "#388e3c", fillColor: "#c8e6c9" };  // verde
+    return { color: "#557700", fillColor: "#7aab00" };
+  } else if (p === "media") {
+    return { color: "#b2b200", fillColor: "#ffff00" };
+  } else if (p === "alta") {
+    return { color: "#cc6600", fillColor: "#ff9900" };
+  } else if (p === "muy alta") {
+    return { color: "#b21800", fillColor: "#ff2200" };
   } else {
-    return { color: "#616161", fillColor: "#eeeeee" };  // gris
+    return { color: "#666666", fillColor: "#cccccc" };
   }
 }
 
@@ -129,29 +133,43 @@ function initMap() {
     }
   }).addTo(map);
 
-  // Manzanas dentro de colonia seleccionada (gris 50% transparencia)
+  // Todas las manzanas en gris claro
+  capaManzanasTodas = L.geoJSON(null, {
+    style: {
+      color: "#999999",
+      weight: 0.3,
+      fillColor: "#cccccc",
+      fillOpacity: 0.35
+    }
+  }).addTo(map);
+
+  // Manzanas dentro de la colonia seleccionada (gris más oscuro, 50% opacidad)
   capaManzanasResaltadas = L.geoJSON(null, {
     style: {
-      color: '#777777',
-      weight: 0.6,
-      fillColor: '#9e9e9e',
-      fillOpacity: 0.5
+      color: "#555555",
+      weight: 0.8,
+      fillColor: "#777777",
+      fillOpacity: 0.50
     }
   }).addTo(map);
 }
 
-// Dibujar colonias
-function cargarColoniasEnMapa() {
+// Dibujar colonias + todas las manzanas
+function cargarCapasEnMapa() {
   capaColonias.clearLayers();
+  capaManzanasTodas.clearLayers();
   capaManzanasResaltadas.clearLayers();
   indiceColonias = {};
+
   capaColonias.addData(coloniasFeatures);
+  capaManzanasTodas.addData(manzanasFeatures);
+
   if (capaColonias.getLayers().length > 0) {
     map.fitBounds(capaColonias.getBounds());
   }
 }
 
-// Resaltar manzanas y colonia según prioridad
+// Resaltar colonia y manzanas internas
 function resaltarColoniaYManzanas(alc, col, prioridad) {
   const key = alc + '|' + col;
   const layerColonia = indiceColonias[key];
@@ -160,10 +178,10 @@ function resaltarColoniaYManzanas(alc, col, prioridad) {
     return;
   }
 
-  // Reset estilo base de todas las colonias
+  // Reset estilo de todas las colonias
   capaColonias.resetStyle();
 
-  // Estilo según prioridad
+  // Aplicar estilo según prioridad
   const est = estiloPrioridad(prioridad);
   layerColonia.setStyle({
     color: est.color,
@@ -197,7 +215,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
   initMap();
 
-  // Cargar GeoJSON de colonias y manzanas
+  // Cargar GeoJSON
   Promise.all([
     fetch('COLONIAS_PRIORIZACION_LIBER.geojson').then(r => r.json()),
     fetch('MANZANAS_LIBER_simplificado.json').then(r => r.json())
@@ -229,7 +247,7 @@ document.addEventListener('DOMContentLoaded', () => {
       munSelect.appendChild(opt);
     });
 
-    cargarColoniasEnMapa();
+    cargarCapasEnMapa();
   })
   .catch(err => console.error('Error cargando GeoJSON:', err));
 
@@ -241,6 +259,7 @@ document.addEventListener('DOMContentLoaded', () => {
     colInput.value = '';
     colInput.disabled = true;
     colList.innerHTML = '';
+    colValueToIndex = {};
     resultadoDiv.style.display = 'none';
     capaManzanasResaltadas.clearLayers();
     if (capaColonias) capaColonias.resetStyle();
@@ -254,39 +273,27 @@ document.addEventListener('DOMContentLoaded', () => {
 
     coloniasDeAlc.forEach(f => {
       const idxGlobal = coloniasFeatures.indexOf(f);
+      const label = `${f.properties.COLONIA} (CP ${f.properties.CP || ''})`;
       const opt = document.createElement('option');
-      opt.value = `${f.properties.COLONIA} (CP ${f.properties.CP || ''})`;
-      opt.dataset.idx = idxGlobal;
+      opt.value = label;
       colList.appendChild(opt);
+      colValueToIndex[label] = idxGlobal;
     });
 
     colInput.disabled = false;
   });
 
-  // Selección de colonia mediante autocomplete
+  // Selección de colonia desde autocomplete
   colInput.addEventListener('change', () => {
-    const val = colInput.value;
-    if (!val) {
+    const label = colInput.value;
+    if (!label || !(label in colValueToIndex)) {
       resultadoDiv.style.display = 'none';
       capaManzanasResaltadas.clearLayers();
       if (capaColonias) capaColonias.resetStyle();
       return;
     }
 
-    // Encontrar la opción del datalist
-    let selectedOpt = null;
-    Array.from(colList.options).forEach(o => {
-      if (o.value === val) selectedOpt = o;
-    });
-
-    if (!selectedOpt) {
-      resultadoDiv.style.display = 'none';
-      capaManzanasResaltadas.clearLayers();
-      if (capaColonias) capaColonias.resetStyle();
-      return;
-    }
-
-    const idx = parseInt(selectedOpt.dataset.idx, 10);
+    const idx = colValueToIndex[label];
     const feat = coloniasFeatures[idx];
     const p = feat.properties || {};
 
